--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,12 +2,13 @@
   border: 1px solid #000;
   border-radius: 10px;
   margin: 0 auto;
-  padding: 16px;
+  padding: 32px 16px;
   display: flex;
   flex-direction: column;
   gap: 24px;
   min-width: 380px;
   margin-bottom: 12px;
+  background-color: #e4ebf5;
 }
 .field {
   display: flex;
@@ -21,6 +22,12 @@
 .input {
   padding-left: 8px;
   border-radius: 6px;
+  min-height: 26px;
+  &:focus {
+    outline: none;
+    border-color: rgb(68, 58, 219);
+    box-shadow: 0px 2px 6px 3px rgba(77, 98, 177, 0.7);
+  }
 }
 .btn {
   border-radius: 10px;
