--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -11,4 +11,5 @@
   padding: 10px;
   border: 1px solid #000;
   border-radius: 10px;
+  background-image: linear-gradient(40deg, #ffffff, #bcd8f0, #daeaee);
 }
