--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -8,8 +8,19 @@
   gap: 8px;
   min-width: 380px;
   margin-bottom: 18px;
+  background-color: #e4ebf5;
+}
+.label {
+  font-weight: bold;
+  color: rgb(51, 203, 51);
 }
 .input {
   padding-left: 8px;
   border-radius: 6px;
+  min-height: 26px;
+  &:focus {
+    outline: none;
+    border-color: rgb(68, 58, 219);
+    box-shadow: 0px 2px 6px 3px rgba(77, 98, 177, 0.7);
+  }
 }
