--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(180deg, #ffffff, #7c8dd4, #ffffff);
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 /* ---Reset styles--- */
@@ -38,22 +41,4 @@ button {
 img {
   max-width: 100%;
   height: auto;
-}
-
-table {
-  width: 1200px;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 10px;
-  text-align: center;
-}
-
-th {
-  color: azure;
-  font-weight: bold;
-  background-color: #262323;
 }
