--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -9,6 +9,9 @@
   min-width: 380px;
   margin-bottom: 12px;
   background-color: #e4ebf5;
+  @media screen and (max-width: 400px) {
+    min-width: 300px;
+  }
 }
 .field {
   display: flex;
