--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -5,7 +5,7 @@
   padding: 32px 16px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+
   min-width: 380px;
   margin-bottom: 12px;
   background-color: #e4ebf5;
@@ -35,7 +35,7 @@
 .btn {
   border-radius: 10px;
   padding: 8px;
-  margin: auto;
+  margin-left: auto;
   &:hover,
   &:focus {
     background-color: rgb(183, 183, 211);
