--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -7,7 +7,7 @@
 .listItem {
   display: flex;
   justify-content: space-between;
-  gap: 36px;
+  min-width: 300px;
   padding: 10px;
   border: 1px solid #000;
   border-radius: 10px;
