--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,7 @@
 .btn {
   border-radius: 10px;
   padding: 8px;
-  margin: auto;
+  margin-left: auto;
   &:hover,
   &:focus {
     background-color: rgb(220, 130, 130);
