--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,6 +1,7 @@
 .form {
   border: 1px solid #000;
   border-radius: 10px;
+  gap: 16px;
   margin: 0 auto;
   padding: 32px 16px;
   display: flex;
@@ -35,7 +36,7 @@
 .btn {
   border-radius: 10px;
   padding: 8px;
-  margin-left: auto;
+  margin: auto;
   &:hover,
   &:focus {
     background-color: rgb(183, 183, 211);
